fix nav on mobile

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -10,10 +10,12 @@
   line-height: .8;
 }
 
-.nav--top__items {
-  position: absolute;
-    top: 5px;
-    left: 4.5em;
+@media(min-width:768px){
+  .nav--top__items {
+    position: absolute;
+      top: 5px;
+      left: 4.5em;
+  }
 }
 
 .typer {
